--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: vesselr
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Gradient and Vessel-Related Tools for NIfTI Images
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Authors@R: person(given = "Jordan D.", family = "Dworkin",  
+  email = "jdwor@mail.med.upenn.edu", role = c("aut", "cre"))
+Maintainer: Jordan D. Dworkin <jdwor@mail.med.upenn.edu>
+Description: Simple functions with few required packages capable of providing gradient, hessian, and vesselness images from a given volume.
+License: GPL-2
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.0.1
