--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Authors@R: person(given = "Jordan D.", family = "Dworkin",  
   email = "jdwor@mail.med.upenn.edu", role = c("aut", "cre"))
 Maintainer: Jordan D. Dworkin <jdwor@mail.med.upenn.edu>
-Description: Simple functions with few required packages capable of providing gradient, hessian, and vesselness images from a given volume.
+Description: Simple functions capable of providing gradient, hessian, and vesselness for a given 3-dimensional volume.
 Imports:  
     oro.nifti,
     parallel,
