--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: vesselr
 Type: Package
 Title: Gradient and Vesselness Tools for Arrays and NIfTI Images
-Version: 0.2
+Version: 0.2.0
 Authors@R: person(given = "Jordan D.", family = "Dworkin",  
   email = "jdwor@mail.med.upenn.edu", role = c("aut", "cre"))
 Maintainer: Jordan D. Dworkin <jdwor@mail.med.upenn.edu>
@@ -14,4 +14,5 @@ Imports:
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
+URL: https://github.com/jdwor/vesselr
 RoxygenNote: 6.0.1
